# pd-hvcc

./: .gitmodules  CMakeLists.txt  README.md  hvcc.c
.github/scripts/: package-Linux.sh  package-macOS.sh
.github/workflows/: cmake.yml
GUI/: CMakeLists.txt  Main.cpp  Objects.h
Resources/: run_hvcc.py
Source/: Interface.cpp  Interface.h  focus.h  hvcc.c
Source/GUI/: Canvas.h  Compiler.h  Connection.h  Interface.h  Main.cpp  Message.h  Object.h  Objects.h  Settings.h
Source/JIT/: jit.cpp  jit.h  predef.cpp
cmake/: FindLibClang.cmake  FindReadLine.cmake
hvcc/: cpuid.c
